[package]
name = "ohos-node-bindgen"
version = "6.0.2"
authors = ["Stuart Zhang <stuartpage@qq.com>"]
edition = "2021"
description = "easy way to write nodejs module using rust"
repository = "https://github.com/stuartZhang/node-bindgen"
readme = "README.md"
license = "Apache-2.0"

[features]
default = ["node"]
node = ["nj-sys", "nj-core", "nj-derive"]
build = ["nj-build"]
serde-json = ["nj-core/serde-json"]
uuid = ["nj-core/convert-uuid"]

[dependencies]
nj-sys = { version = "0.1.1", package = "oh-napi-sys", optional = true }
nj-core = { path = "nj-core", version = "6.0.1", optional = true }
nj-build = { path = "nj-build", version = "0.3.0", optional = true }
nj-derive = { path = "nj-derive", version = "3.2.0", optional = true }

[workspace]
resolver = "2"
members = ["nj-build", "nj-cli", "nj-core", "nj-derive"]
