[package]
name = "nj-build"
version = "0.3.0"
authors = ["Stuart Zhang <stuartpage@qq.com>"]
edition = "2021"
description = "build configuration for ohos-node-bindgen"
repository = "https://github.com/stuartZhang/node-bindgen"
license = "Apache-2.0"

[target.'cfg(windows)'.dependencies]
http_req = "0.10.0"
cc = "1.0.58"
