[package]
name = "nj-cli"
version = "0.4.3"
authors = ["Stuart Zhang <stuartpage@qq.com>"]
edition = "2021"
description = "build tool for ohos-node-bindgen"
repository = "https://github.com/stuartZhang/node-bindgen"
license = "Apache-2.0"

[dependencies]
log = "0.4.8"
structopt = { version = "0.3.18", default-features = false }
cargo_metadata = "0.18.0"
toml = "0.8.0"
serde = { version = "1.0.114", features = ["derive"] }
