[package]
name = "ohos-nj-core"
version = "6.0.2"
authors = ["Stuart Zhang <stuartpage@qq.com>"]
edition = "2021"
description = "high level wrapper for Node N-API"
repository = "https://github.com/stuartZhang/node-bindgen"
readme = "README.md"
license = "Apache-2.0"

[lib]
test = false

[features]
serde-json = ["serde_json"]
convert-uuid = ["uuid"]

[dependencies]
tracing = "0.1.37"
ctor = "0.2.4"
libc = "0.2.66"
inventory = "0.1.5"
async-trait = "0.1.22"
futures-lite = "1.7.0"
nj-sys = { version = "0.1.1", package = "oh-napi-sys"}
fluvio-future = { version = "0.6.0", default-features=false, features=["task","subscriber"]}
pin-utils = "0.1.0"
num-bigint = "0.4.0"
serde_json = { version = "1.0", optional = true }
uuid = { version = "1.4.1", optional = true }
rustix = "=0.38.14"