[package]
name = "ohos-nj-derive"
version = "3.4.2"
authors = ["Stuart Zhang <stuartpage@qq.com>"]
edition = "2018"
description = "procedure macro for ohos-node-bindgen"
repository = "https://github.com/stuartZhang/node-bindgen"
readme = "README.md"
license = "Apache-2.0"

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "parsing", "visit-mut","derive","extra-traits"] }
Inflector = "0.11.4"

[dev-dependencies]
trybuild = { git = "https://github.com/infinyon/trybuild", branch = "check_option" }
ohos-node-bindgen = { path = ".." }
fluvio-future = { version = "0.6.0", features = ["timer"] }
