[package]
name = "nj-example-cb"
version = "0.1.0"
authors = ["Stuart Zhang <stuartpage@qq.com>"]
edition = "2021"


[lib]
crate-type = ["cdylib"]


[dependencies]
ohos-node-bindgen = { workspace = true}

[build-dependencies]
ohos-node-bindgen = { path = "../../", default-features = false, features = ["build"] }