[package]
name = "nj-example-class-async"
version = "0.0.0"
authors = ["Stuart Zhang <stuartpage@qq.com>"]
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]


[dependencies]
ohos-node-bindgen = { workspace = true}
fluvio-future = { workspace = true}

[build-dependencies]
ohos-node-bindgen = { path = "../../", default-features = false, features = ["build"] }
