[package]
name = "test-electron"
version = "0.0.0"
authors = ["Stuart Zhang <stuartpage@qq.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]


[dependencies]
ohos-node-bindgen = { workspace = true}


[build-dependencies]
ohos-node-bindgen = { path = "../../", default-features = false, features = ["build"] }
