[package]
name = "nj-example-json"
version = "0.0.0"
authors = ["Stuart Zhang <stuartpage@qq.com>"]
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]


[dependencies]
ohos-node-bindgen = { workspace = true, features = ["serde-json"]}
serde_json = { workspace = true }


[build-dependencies]
ohos-node-bindgen = { path = "../../", default-features = false, features = ["build"] }
