[package]
name = "nj-example-uuid"
version = "0.0.0"
authors = ["Stuart Zhang <stuartpage@qq.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
uuid = { workspace = true }
ohos-node-bindgen = { workspace = true, features = ["uuid"]}

[build-dependencies]
ohos-node-bindgen = { path = "../../", default-features = false, features = ["build"] }
